--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "grunt-sync": "^0.8.0",
     "iconv-lite": "^0.4.19",
     "include-all": "^0.1.6",
+    "latest-version": "^5.1.0",
     "lodash": "^4.17.4",
     "nodemailer": "^6.1.1",
     "rc": "~0.3.3",
     "sails": "^0.11.0",
-    "sails-disk": "git://github.com/balderdashy/sails-disk.git#v0.10",
+    "sails-disk": "~0.10.9",
     "sails-hook-dev": "^1.0.0",
     "sails-hook-email": "^0.12.1",
     "sails-hook-update-or-create": "^0.1.4",
@@ -45,7 +46,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "debug": "node debug app.js"
+    "debug": "node debug app.js",
+    "test": "mocha test"
   },
   "main": "app.js",
   "repository": {
@@ -53,8 +55,19 @@
     "url": "git://github.com/anonymous node/sails user/itseed.git"
   },
   "author": "anonymous node/sails user",
-  "license": "",
+  "license": "MIT",
   "devDependencies": {
-    "grunt": "^0.4.2"
+    "@wdio/cli": "^5.10.0",
+    "@wdio/local-runner": "^5.10.0",
+    "@wdio/mocha-framework": "^5.9.4",
+    "@wdio/spec-reporter": "^5.9.3",
+    "@wdio/sync": "^5.10.0",
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
+  },
+  "directories": {
+    "test": "test"
   }
 }
